# weather-aqi-analytics-pipeline

./: .env.example  .gitignore  Dockerfile  Dockerfile.dbt  Dockerfile.streamlit  README.md  README_OLD.md  docker-compose.yml  init.sql  pyproject.toml
dashboard/: README.md  app.py  requirements.txt
dbt_weather/: .user.yml  dbt_project.yml  profiles.yml
dbt_weather/models/: schema.yml
dbt_weather/models/marts/: dim_city.sql  fact_air_quality_daily.sql  fact_weather_daily.sql
dbt_weather/models/staging/: stg_air_quality__observations.sql  stg_weather__observations.sql
src/: __init__.py  config.py  db.py
src/clients/: __init__.py  air_quality_client.py  weather_client.py
src/etl/: __init__.py  fetch_and_load_weather.py  transform_to_analytics.py
src/scheduling/: __init__.py  airflow_dag_example.py
